tests/negative/gold/default_values2_test.gold
tests/negative/default_values2_test.toit:4:8: error: Unexpected block
foo x=(:499):
       ^~~~
tests/negative/default_values2_test.toit:4:7: error: Default value can't be a block
foo x=(:499):
      ^
Compilation failed.
